partial fix for navbar scrollbars enabled sticky playbar

--- a/config/client/scrollbars/hide.css
+++ b/config/client/scrollbars/hide.css
@@ -3,4 +3,7 @@
   --option-display-scrollbars: 0px;
   --option-navbar-position: absolute;
   --option-navbar-margin: 32px;
+  --option-playbar-margin: 48px;
+  --option-controls-background: transparent;
+  --option-playbar-background: transparent;
 }
