--- a/config/client/scrollbars/show.css
+++ b/config/client/scrollbars/show.css
@@ -3,4 +3,7 @@
   --option-display-scrollbars: 16px;
   --option-navbar-position: relative;
   --option-navbar-margin: 0px;
+  --option-playbar-margin: 0px;
+  --option-controls-background: var(--color-acrylic);
+  --option-playbar-background: var(--color-acrylic-focus-window);
 }
