--- a/css/variables/options.css
+++ b/css/variables/options.css
@@ -19,6 +19,9 @@
   --display-scrollbars: var(--option-display-scrollbars, 0px);
   --navbar-position: var(--option-navbar-position, absolute);
   --navbar-margin: var(--option-navbar-margin, 32px);
+  --playbar-margin: var(--option-playbar-margin, 48px);
+  --controls-background: var(--option-controls-background, transparent);
+  --playbar-background: var(--option-playbar-background, var(--color-acrylic-focus-window));
 
   --display-tooltips: var(--option-display-tooltips, block);
 
